--- a/config/playbook.yml
+++ b/config/playbook.yml
@@ -12,11 +12,14 @@
           - unzip
           - awscli
         state: present
-
+        
     - name: Create Minecraft directory
       file:
         path: /home/ec2-user/minecraft
         state: directory
+        owner: ec2-user
+        group: ec2-user
+        mode: '0755'
 
     - name: Download Minecraft Server 1.21.5
       get_url:
