--- a/config/playbook.yml
+++ b/config/playbook.yml
@@ -1,10 +1,18 @@
 - hosts: minecraft
   become: yes
   tasks:
-    - name: Install Java
-      yum:
-        name: java-1.8.0-openjdk
-        state: present
+    - name: Install Amazon Corretto 21 (Java 21)
+      shell: |
+        sudo rpm --import https://yum.corretto.aws/corretto.key
+        sudo curl -L -o /etc/yum.repos.d/corretto.repo https://yum.corretto.aws/corretto.repo
+        sudo yum install -y java-21-amazon-corretto
+    args:
+      executable: /bin/bash
+
+    - name: Set Java 21 as default
+      alternatives:
+        name: java
+        path: /usr/lib/jvm/java-21-amazon-corretto/bin/java
 
     - name: Install unzip and AWS CLI
       yum:
