--- a/config/playbook.yml
+++ b/config/playbook.yml
@@ -13,6 +13,7 @@
       alternatives:
         name: java
         path: /usr/lib/jvm/java-21-amazon-corretto/bin/java
+      when: not ansible_check_mode
 
     - name: Install unzip and AWS CLI
       yum:
