--- a/config/playbook.yml
+++ b/config/playbook.yml
@@ -1,13 +1,15 @@
 - hosts: minecraft
   become: yes
   tasks:
-    - name: Install Amazon Corretto 21 (Java 21)
+    - name: Download and install Java 21
       shell: |
-        sudo rpm --import https://yum.corretto.aws/corretto.key
-        sudo curl -L -o /etc/yum.repos.d/corretto.repo https://yum.corretto.aws/corretto.repo
-        sudo yum install -y java-21-amazon-corretto
+        curl -L -o /tmp/corretto.tar.gz https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz
+        mkdir -p /opt/corretto
+        tar -xzf /tmp/corretto.tar.gz -C /opt/corretto --strip-components=1
+        alternatives --install /usr/bin/java java /opt/corretto/bin/java 1
       args:
         executable: /bin/bash
+      when: not ansible_check_mode
 
     - name: Set Java 21 as default
       alternatives:
