--- a/config/server.properties
+++ b/config/server.properties
@@ -12,8 +12,8 @@ op-permission-level=4
 prevent-proxy-connections=false
 generator-settings=
 resource-pack=
-level-name=Spacelift!
-motd=Welcome to Spacelift's Minecraft Server!
+level-name=spacelift-world
+motd=Welcome to Spacelift's Minesible Server 🚀
 player-idle-timeout=0
 spawn-protection=16
 online-mode=true
