--- a/config/server.properties
+++ b/config/server.properties
@@ -13,7 +13,7 @@ prevent-proxy-connections=false
 generator-settings=
 resource-pack=
 level-name=spacelift-world
-motd=Welcome to Spacelift's Minesible Server 🚀
+motd=   \u00A75 [🧑‍🚀 spacelift managed minecraft server 🚀]\u00A7r\n         \u00A7d\u00A7ka\u00A7r ~ \u00A78\u00A7lminesible server 1.21.6\u00A7r ~ \u00A7d\u00A7ka\u00A7r
 player-idle-timeout=0
 spawn-protection=16
 online-mode=true
