--- a/config/save-world.yml
+++ b/config/save-world.yml
@@ -1,6 +1,5 @@
 # config/save-world.yml
-- name: Save Minecraft world to S3 bucket
-  hosts: minecraft
+- hosts: minecraft
   become: true
   tasks:
     - name: Zip Minecraft world directory
@@ -10,4 +9,4 @@
 
     - name: Upload zipped world to current S3 bucket
       shell: |
-        aws s3 cp /home/ec2-user/minecraft/world.zip s3://{{ s3_bucket }}/world.zip
+        aws s3 cp /home/ec2-user/minecraft/world.zip s3://${{ s3_bucket }}/world.zip
